# BlueCelluLab

./: .compile_mod.sh  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .install_common_mods.sh  .install_neurodamus.sh  .install_neuron.sh  .jenkins.sh  .readthedocs.yml  .upload_docs.py  .zenodo.json  AUTHORS.txt  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  Makefile  README.rst  __init__.py  bglibpy.py  build.sh.example  build.sh.example.bbpsrv22  build.sh.example.bbpsrv24  build.sh.example.bbpsrv25  build.sh.example.viz  build.sh.hbpcol.example  build.sh.lbgq  build.sh.lviz.example  covertests.sh  index.html  index.rss  package.json  plot_graph.py  pyproject.toml  (+6 more)
bglibpy/: CMakeLists.txt  __init__.py  _version.py  cell.py  connection.py  dendrogram.py  exceptions.py  importer.py  neuron_interpreter.py  plotwindow.py  psection.py  psegment.py  rngsettings.py  setup.py.in  simulation.py  ssim.py  stimuli.py  synapse.py  tools.py  version.py  versions.py
bglibpy/bglibpy/: CMakeLists.txt  cell.py  connection.py  dendrogram.py  importer.py  psection.py  psegment.py  simulation.py  ssim.py  synapse.py  tools.py
bglibpy/bglibpy/nrnmech/: CMakeLists.txt
bglibpy/cell/: __init__.py  cell.py  cell_dict.py  injector.py  plotting.py  random.py  section_distance.py  serialized_sections.py  sonata_proxy.py  stimuli_generator.py  template.py
bglibpy/circuit/: __init__.py  circuit_access.py  format.py  iotools.py  node_id.py  simulation_access.py  synapse_properties.py  validate.py
bglibpy/circuit/config/: __init__.py  config.py  sections.py  simulation_config.py
bglibpy/hoc/: Cell.hoc  RNGSettings.hoc  TDistFunc.hoc  fileUtils.hoc
bglibpy/simulation/: neuron_globals.py  simulation.py
bglibpy/synapse/: __init__.py  synapse.py  synapse_factory.py  synapse_params.py  synapse_types.py
bglibpy/test/: test_ballstick.py  test_bglib.py  test_cell.py  test_simulation.py  test_ssim.py  test_tools.py  test_ttx.py
bglibpy/test/ballstick_circuit_test/: ballstick.asc  run_and_postprocess_bglib.sh
bglibpy/test/pep8/: pep8rc
bglibpy/test/pylint/: CMakeLists.txt
bglibpy/tests/: CMakeLists.txt  test_ballstick.py  test_bglib.py  test_cell.py  test_importer.py  test_load.py  test_rngsettings.py  test_simulation.py  test_ssim.py  test_ssim_gpfs.py  test_tools.py  test_ttx.py
bglibpy/tests/ballstick_circuit_test/: BlueConfig  README.ballstick_circuit  ballstick_test.py  btn_bs_nogreen.py  plot_bglib.py
bglibpy/tests/external_tools/: greensFunctionCalculator.py  soma2h5.py
bglibpy/tests/pep8/: run_pep8.sh.in
bglibpy/tests/pylint/: run_pylint.sh.in
bglibpy/tests/wernertests/: ssim_replay.py
doc/: .gitignore  CMakeLists.txt  Makefile  api.rst  conf.py  conf.py.in  index.rst  installation.rst  introduction.rst  make.bat  readme.rst  tutorial.rst  upload_doc.sh.in
doc/_build/doctrees/: api.doctree  environment.pickle  index.doctree  readme.doctree  tutorial.doctree
doc/_build/html/: .buildinfo  api.html  genindex.html  index.html  np-modindex.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  tutorial.html
doc/source/: api.rst  conf.py  conf.py.in  dependencies.rst  faq.rst  index.rst  installation.rst  introduction.rst  tutorial.rst
src/: CMakeLists.txt  __init__.py  bglibpy.py  cell.py  connection.py  dendrogram.py  importer.py  paths.config.in  plotwindow.py  psection.py  psegment.py  simulation.py  ssim.py  synapse.py  tools.py  versions.py.in
test/: .gitignore  CMakeLists.txt  cADpyr2280_L5_TTPC2_5_dend-ch150801A1_axon-tr050310_5_c1.hoc  cADpyr228_L5TTPC_5_C060110A3.hoc  runtests.sh.in  ssim_replay.py  test.py  test.sh  test1.py  test2.py  test_ballstick.py  test_bglib.py  test_cell.py  test_load.py  test_load.py.in  test_simulation.py  test_ssim.py  test_tools.py  test_ttx.py
test/ballstick_circuit_test/: ballstick_test.py  btn_bs.py  btn_bs_nogreen.py  circuit.mvd2  plot_bglib.py  start.target
test/ballstick_test/: BlueConfig  CircuitConfig  ball2stick.cfg  ballstick.asc  ballstick.h5  ballstick.hoc  ballstick.py  ballstick_test.py  bs.cfg  btn_bs.py  btn_bs_nogreen.py  convert_ballstick_asc.sh  nrn.h5  start.ncs  write_nrn_h5.py
test/ballstick_test/bglib_output/: soma.h5
test/cell_test/: cell_test.py  test_cell.hoc
test/circuit_twocell_example1/: CircuitConfig  circuit_mvd2.sqlite
test/circuit_twocell_example1/ncsFunctionalAllRecipePathways/: nrn.h5
test/create_examples/: maketestcircuit1.py
test/create_examples/create_info_dicts/: create_cell_info_dict.py
test/create_examples/create_mtype_lists/: create_mtype_lists.py
test/create_examples/create_sims_twocell/: BlueConfig.all.template  BlueConfig.empty.template  BlueConfig.minis.replay.template  BlueConfig.neuronconfigure.template  BlueConfig.noisestim.template  BlueConfig.synapseid.template  README.twocell_circuit  create_circuit_twocell_example1.py  create_sims_twocell.py  make_sim_twocell_empty.py  soma2h5_v2_bglibpy.py
test/create_examples/sim_twocell_empty/: BlueConfig.template  make_sim_twocell_empty.py  run.sh.template
test/examples/ballstick_cell/: analytic_expsyn.pickle  bs.cfg
test/examples/cell_example1/: test_cell_longname1.hoc
test/examples/cell_example2/: test_cell.asc  test_cell.hoc
test/external_tools/: soma2h5.py
test/load_test/: load_test.py
test/modlib/: ALU.mod  ASCIIrecord.mod  BK.mod  HCN4_0064.mod  HHK.mod  HHK1.mod  HHK2.mod  HHNa.mod  HHO.mod  ISynAMPAEx.mod  ISynNMDAEx.mod  KCa2.mod  Kfast.mod  Kfast10oct07.mod  Kfast_S.mod  Kslow10oct07.mod  Kslow_S.mod  Kv1_1.mod  Kv1_3.mod  Kv1_6.mod  Kv3_1.mod  Na10oct07.mod  NaTaxon.mod  Na_E.mod  Na_S.mod  ProbAMPANMDA.mod  ProbGABAA.mod  StochKv.mod  _CSA.mod  _CSNa.mod  _iAHP.mod  _outside_calcium_concentration.mod  km1.mod  na2.mod  pump.mod  synutils.inc  tmgExSyn.mod  tmgInhSyn.mod  traub.mod  utility.mod
test/pep8/: CMakeLists.txt  run_pep8.sh.in
test/psp_bglib/: test_psp_bglib.py
test/pylint/: run_pylint.sh.in
test/wernertests/: BlueConfig.nostim.conn  ssim_replay.py  testreplay.py
(+559 files in other folders)
