[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bluecellulab"
description = "Biologically detailed neural network simulations and analysis."
readme = "README.rst"
authors = [{ name = "Blue Brain Project, EPFL" }]
dynamic = ["version"]
license = { text = "Apache2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
keywords = [
    "computational neuroscience",
    "simulation",
    "analysis",
    "SONATA",
    "neural networks",
    "neuron",
    "Blue Brain Project",
]
dependencies = [
    "NEURON>=8.0.2,<9.0.0",
    "numpy>=1.8.0,<2.0.0",
    "matplotlib>=3.0.0,<4.0.0",
    "pandas>=1.0.0,<3.0.0",
    "bluepysnap>=3.0.0,<4.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "typing-extensions>=4.8.0",
    "networkx>=3.1",
    "h5py>=3.8.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/BlueBrain/BlueCelluLab"
Documentation = "https://bluecellulab.readthedocs.io/"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["bluecellulab"]

[tool.pytest.ini_options]
markers = [
    "v5: tests on the neocortex circuit version 5.",
    "v6: tests on the neocortex circuit version 6.",
    "thal: tests on the thalamus circuit.",
    "unit: unit tests.",
]

[tool.mypy]
exclude = "doc"
plugins = ["pydantic.mypy"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
omit = [
    "bluecellulab/circuit/circuit_access/bluepy_circuit_access.py",
    "bluecellulab/circuit/config/bluepy_simulation_config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
